--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "typeRoots": ["./types", "./node_modules/@types"],
   "exclude": ["node_modules"]
 }
